--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+}
+html {
+    scroll-behavior: smooth;
+}
+::-webkit-scrollbar{
+    display: none;
+}
+:root {
+    --color-bg: #cecece;
+    --color-bg-variant: #2c2c6c;
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
+
+    --container-lg: 75%;
+    --container-md: 86%;
+    --container-sm: 90%;
+
+    --transition: all 0.4s ease;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background: var(--color-bg);
+    color: var(--color-white);
+}
+
+.container {
+    width: var(--container-lg);
+    margin: 0 auto;
+    background-image: url(.././src/assets/bg-texture.png);
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+.btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-primary);
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid rgb(107, 107, 107);
+    transition: var(--transition);
+}
+
+.btn:hover{
+    background: transparent;
+    border-color: rgb(115, 207, 243);
+    border: 1px solid var(--color-primary);
+    box-shadow: 0px 0px 6px var(--color-primary);
+    transition: var(--transition);
+}
+
+a {
+    color: var(--color-primary);
+    transition: var(--transition);
+}
+
+a:hover {
+    color: rgb(0, 0, 0);
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-md);
+        /* background-image: url(.././src/assets/bg-texture.png); */
+        /* background: rebeccapurple; */
+    }
+
+}
+
+@media screen and (max-width: 600px){
+    .container {
+        width: var(--container-sm);
+    }
+
 }
